studio perspective WIP

--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "perspective",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {},
+  "dependencies": {
+    "three": "^0.161.0"
+  },
   "devDependencies": {
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "vite": "^5.0.0"
   },
   "private": true
 }
