--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-wallet-pass": "node generate-wallet-pass.js",
+    "create-pkpass": "node create-pkpass.js",
+    "wallet-pass": "npm run generate-wallet-pass && npm run create-pkpass"
   },
   "dependencies": {
     "three": "^0.161.0"
   },
   "devDependencies": {
+    "archiver": "^7.0.1",
     "typescript": "^5.5.3",
     "vite": "^5.0.0"
   },
